# bevdet-tensorrt-cpp

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md  configure.yaml  demo_bevdet.cpp  test.ipynb
cfgs/: bevdet-oh.yaml  bevdet.yaml  bevdet_lt_depth.yaml
doc/: README_zh-CN.md
include/: alignbev_plugin.h  bevdet.h  bevpool.h  bevpool_plugin.h  common.h  cpu_jpegdecoder.h  data.h  gatherbev_plugin.h  grid_sampler.cuh  iou3d_nms.h  nvjpegdecoder.h  plugin_helper.cuh  postprocess.h  preprocess.h  preprocess_plugin.h
sample0/: sample0000.yaml  sample0_lidarbox.txt
src/: alignbev_plugin.cu  bevdet.cpp  bevpool.cu  bevpool_plugin.cu  cpu_jpegdecoder.cpp  data.cpp  gatherbev_plugin.cu  grid_sampler.cu  iou3d_nms.cu  nvjpegdecoder.cpp  postprocess.cu  preprocess.cu  preprocess_plugin.cu
tools/: export_engine.cu  export_engine.py  export_one_engine.py  open3d_vis.py  viewer.py
